--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = bro
-url = https://www.bro.org/downloads/bro-2.6.1.tar.gz
+url = https://www.bro.org/downloads/bro-2.6.2.tar.gz
 archives = 
 giturl = https://github.com/bro/bro.git
 
@@ -52,7 +52,7 @@ use_avx512 = false
 # add clang flags
 use_clang = false
 # configure build for lto
-use_lto = false
+use_lto = true
 # require package verification for build
 verify_required = true
 
